--- a/home.html
+++ b/home.html
@@ -152,7 +152,7 @@ with <a href="https://cjudge.pages.iu.edu/"> C. Judge</a>.
 
 
 <li><b>Critical points of Laplace eigenfunctions on polygons</b><br>
-with <a href="https://cjudge.pages.iu.edu/"> C. Judge</a>.<br> Published in Comm. in PDE. <a href= "Critical points.pdf"> PDF </a><br>
+with <a href="https://cjudge.pages.iu.edu/"> C. Judge</a>.<br> Published in Comm. in PDE. <a href= "Critical-points.pdf"> PDF </a><br>
 		      
 </li><br>
 
