--- a/home.html
+++ b/home.html
@@ -182,7 +182,7 @@ with <a href="https://www.mpim-bonn.mpg.de/node/103"> Werner Ballmann </a> and H
 
 
 <li><b>An arithmetic property of the set of angles between closed geodesics on hyperbolic surfaces of finite type. 
-</b><br> Published in Geometriae Dedicata. <a href= "angle.pdf"> PDF </a>
+</b><br> Published in Geometriae Dedicata. <a href= "angles.pdf"> PDF </a>
                    
 </li><br>    
 		   
