--- a/home.html
+++ b/home.html
@@ -228,13 +228,13 @@ Published in Math. Z. <a href= "First Eigenvalue.pdf"> PDF </a><br>
 
 
 <li><b>On topological upper-bounds on the number of small cuspidal eigenvalues of finite area hyperbolic surfaces. 
-</b><br> Published in IMRN. <a href= "small cuspidal.pdf"> PDF </a><br>
+</b><br> Published in IMRN. <a href= "Small Cuspidal.pdf"> PDF </a><br>
                    
 </li><br>  
   
 
 <li><b> Systole and $\lambda_{2g-2}$ of closed hyperbolic surfaces of genus g.
-</b><br> Published in Enseign. Math.<a href= "systole and eigenvalue.pdf"> PDF </a><br>
+</b><br> Published in Enseign. Math.<a href= "Systole and eigenvalue.pdf"> PDF </a><br>
 
 
 
