--- a/home.html
+++ b/home.html
@@ -234,7 +234,7 @@ Published in Math. Z. <a href= "First Eigenvalue.pdf"> PDF </a><br>
   
 
 <li><b> Systole and $\lambda_{2g-2}$ of closed hyperbolic surfaces of genus g.
-</b><br> Published in Enseign. Math.<a href= "Systole and eigenvalue.pdf"> PDF </a><br>
+</b><br> Published in Enseign. Math.<a href= "Systole and Eigenvalue.pdf"> PDF </a><br>
 
 
 
