--- a/home.html
+++ b/home.html
@@ -209,7 +209,7 @@ Published in Comp. Math. <a href= "Small eigenvalues of surfaces of finite type.
 
 <li><b> Geodesics and Nodal sets of eigenfunctions on Hyperbolic manifold.</b><br>
 with <a href="https://cjudge.pages.iu.edu/"> C. Judge.</a><br>
-Published in Proc. of AMS. <a href= "Geodesics inside nodal sets.pdf"> </a><br>
+Published in Proc. of AMS. <a href= "Geodesics inside nodal sets.pdf"> PDF </a><br>
 		      
 </li><br>
 			  
